--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
-EMAIL_SENDER=test@surreyviktor.com
-EMAIL_OWNER=victor.data.host@gmail.com
-EMAIL_SUBJECT_OWNER='Здравейте, пристигна нова поръчка'
-EMAIL_SUBJECT_CLIENT='Здравейте %s, вашата поръчка беше изпратена'
-EMAIL_SMTP_HOST=mail.surreyviktor.com
-EMAIL_SMTP_USER=test@surreyviktor.com
-EMAIL_SMTP_PASSWD=vik_pet_123
-EMAIL_SMTP_PORT=465
+EMAIL_SENDER=
+EMAIL_OWNER=
+EMAIL_SUBJECT_OWNER=
+EMAIL_SUBJECT_CLIENT=
+EMAIL_SMTP_HOST=
+EMAIL_SMTP_USER=
+EMAIL_SMTP_PASSWD=
+EMAIL_SMTP_PORT=
 
 DB_HOST=localhost
-DB_USER=admin
-DB_PASSWORD=admin
-DB_NAME=sirius
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
 DB_CHARSET=utf8
